--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -17,6 +17,7 @@ body {
 
 .cabecalho .titulo {
     color: #f1ecff;
+    margin-left: 19px;
 }
 
 .cartao {
@@ -37,6 +38,8 @@ body {
     width: 300px;
     height: 500px;
     border-radius: 10px;
+    position: relative;
+    padding: 12px;
 }
 
 .slider {
@@ -180,4 +183,31 @@ body::-webkit-scrollbar-track {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #c08057;
+}
+
+.carta-virada {
+    display: none;
+}
+
+.carta-virada.mostrar-fundo-carta {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url(../imagens/fundo-carta.jpg);
+    background-size: cover;
+    background-position: center;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    z-index: 2;
+}
+
+.cartao.virar {
+    transform: rotateZ(90deg);
+    transition: transform 0.3s ease-in-out;
+}
+
+.esconder {
+    display: none;
 }
